[package]
name = "certglass"
version = "0.1.0"
authors = ["Ryan Barry <ryan@nuclearice.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.24"
chrono = "0.4.11"
reqwest = { version = "0.10.6", features = ["json", "gzip", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
